# PingPong

./: .gitignore  .tasks  CMakeLists.txt  CMakeLists.txt~  LICENSE  README.md  build.sh~  buildweb.sh  compile_commands.json  run.sh~
.cache/clangd/index/: AiPaddle.h.A8530EC23CC40214.idx  Ball.h.02845B9F745E4680.idx  GTime.cpp.8147813C129DEDA1.idx  GTime.h.3051E03EEAB31A36.idx  Game.cpp.7F212000BB158BCC.idx  GameState.cpp.766BDAFE8F20A383.idx  GameState.h.D574D6F303142D23.idx  Paddle.h.B97C9E91F145199D.idx  Score.h.52D4B60C7AFAD395.idx  cgltf.h.46F1F64B0A9696A1.idx  config.h.3F8FB96C4EADFA49.idx  context.c.8B643DCB1A8CE894.idx  dr_mp3.h.4B069B06B436F1BA.idx  dr_wav.h.444C981CF9E716DD.idx  egl_context.c.566EA282055DBFC8.idx  glad.h.62D68B49748C7E95.idx  glfw3.h.8BDED1F6645A9073.idx  glfw3native.h.BFAF5B051BC46C88.idx  glx_context.c.FA0E0E8951538064.idx  init.c.5FF86864C7BC1E3F.idx  input.c.6AB6EBA83ED37E0D.idx  internal.h.7F3CDAA3F4D972BD.idx  jar_mod.h.5BDA9AAE6511A1F7.idx  jar_xm.h.0CACFD579B9BBFF5.idx  linux_joystick.c.1B065B9D9B354B35.idx  linux_joystick.h.80814ABB690E6505.idx  m3d.h.52891444D326BD4F.idx  mappings.h.13152F403CE694C2.idx  miniaudio.h.C4B8C3D39AD856A9.idx  monitor.c.22A1BA1E8C4C5BB0.idx  msf_gif.h.28AE088A6F1E0824.idx  null_init.c.530979E08E28FE17.idx  null_joystick.c.7F4FDC8941D59CF9.idx  null_joystick.h.090AC1E04B426077.idx  null_monitor.c.60B01CAA70F363AD.idx  null_platform.h.21ECDF8859BFE596.idx  (+50 more)
Assets/shaders/: Basic.shader
include/: #Pong.h#  AiPaddle.h  Background.h  Background.h~  Ball.h  Ball.h~  GTime.h  GameState.h  MainSetting.h  Menu.h  Menu.h~  OverMenu.h  Paddle.h  Paddle.h~  Pong.h  Pong.h~  Score.h  Score.h~  Setting.h  Setting.h~
include/Engine/: Application.h  Application.h~  Config.h  Core.h  Engine.h  Entry.h  GameObject.h  Log.h  Object.h  OpenGLWindow.h  ResourceManager.h  Scene.h  Shader.h  SpriteRenderer.h  Texture.h  Window.h  enpch.h
include/Engine/Core/: Log.h  (+10 more)
include/Game/: Game.h
run/: bnr.bat  bnr.sh  cmake.bat  cmake.sh  make.bat  run.bat  run.sh
src/: Background.cpp  GTime.cpp  Game.cpp  GameState.cpp  MainSetting.cpp  Menu.cpp  Menu.cpp~  OverMenu.cpp  Pong.cpp  Pong.cpp~  ResourceManager.cpp  ResourceManager.cpp~  Scene.cpp  Scene.cpp~  Setting.cpp  Setting.cpp~  main.cpp  main.cpp~
src/Engine/: Application.cpp  GameObject.cpp  Log.cpp  OpenGLContext.cpp  OpenGLInput.cpp  OpenGLWindow.cpp  ResourceManager.cpp  Shader.cpp  SpriteRenderer.cpp  Texture.cpp
src/Game/: Game.cpp
(+7 files in other folders)
